--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-imgix": "^9.1.5",
-    "react-scripts": "^0.0.0",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build --output public",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
